apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort:  http
