apps/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/target: michaelthomson.ddns.net
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: ntfy.michaelthomson.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service
            port: 
              name: http
  tls:
    - hosts:
        - ntfy.michaelthomson.dev
      secretName: ntfy-tls
